@@ -276,7 +276,7 @@ remove_unit_limit = true
 remove_city_improvement_limit = true
 
 ; If set to a number > 0, prevents units from moving onto tiles that already have at least that many units on them. Set to false or a number <= 0 to
-; return to the standard game rule of unlimited units per tile.
+; return to the standard game rule of unlimited units per tile. The limit applies separately to land, sea, and air units.
 ; By default, cities are excluded from this limit but you can change that by toggling the option below.
 limit_units_per_tile = false
 
